<resources>
    <string name="app_name">Uber</string>
    <string name="i_am_driver">I am driver</string>
    <string name="i_am_customer">I am customer</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="title_activity_driver_map">Map</string>
    <string name="display_permission_rationale">Displaying permission rationale to provide additional context.</string>
    <string name="permission_rationale">Location data is used as part of the Google Fit API</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="no_location_detected">No location detected</string>
    <string name="logout">Logout</string>
</resources>